--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://harshavar-bit.github.io/React-Robo-Friends-ZTM",
+  "homepage": "http://harshavar-bit.github.io/robo-FriendsZTM",
   "name": "robofriends",
   "version": "0.1.0",
   "private": true,
